--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -90,6 +90,8 @@
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
+
+        <!--
         <div class="card">
           <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
           <h3>🎃 Halloween chupetines (30u)</h3>
@@ -97,6 +99,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+         -->
 
         <div class="card">
           <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
@@ -123,8 +126,8 @@
         </div>
 
         <div class="card">
-          <img src="img/nutello1.jpg" alt="Nutello" onclick="abrirModal(this)">
-          <h3>Nutello (30u)</h3>
+          <img src="img/nutello60.jpg" alt="Nutello" onclick="abrirModal(this)">
+          <h3>Nutello pequeños (60u)</h3>
           <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -201,7 +204,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
+        <!--
         <div class="card">
           <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
           <h3>Chupetin Calabaza con polvo acido (30u)</h3>
@@ -209,7 +212,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
+        -->
         <div class="card">
           <img src="img/seleccion.jpg" alt="Seleccion Argentina" onclick="abrirModal(this)">
           <h3>Gomitas blandas Selección Argentina (30u)</h3>
@@ -259,14 +262,6 @@
         </div>
 
         <div class="card">
-          <img src="img/alcanciaojoamarillo.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
-          <h3>Alcancias con gelatinas tigre</h3>
-          <p>$4.900 (CADA UNA)</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
           <img src="img/chiclepormetro1.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
           <h3>Chicle por metro (30u)</h3>
           <p>$9.800</p>
@@ -276,7 +271,7 @@
 
         <div class="card">
           <img src="img/chiclepormetro2.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
-          <h3>Chicle por metro (30u)</h3>
+          <h3>Chicle por metro Barbie (30u)</h3>
           <p>$9.800</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -291,18 +286,8 @@
         </div>
 
         <div class="card">
-          <img src="img/chupetinesconformas.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
-          <h3>Chupetines con formas (x30)</h3>
-          <p>$8.900</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-  
-
-        <div class="card">
           <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
-          <h3>Pimball + chicles(x30)</h3>
+          <h3>Pimball + chicles Kitty (x30)</h3>
           <p>$8.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -363,7 +348,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
+      <!--
         <div class="card">
           <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
           <h3>Gomitas Yummy frutilla con crema (500g)</h3>
@@ -371,7 +356,7 @@
           <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
+      -->
         <div class="card">
           <img src="img/yummybananitas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
           <h3>Gomitas Yummy bananitas (500g)</h3>
