--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -29,7 +29,7 @@
     </nav>
   </div>
 
-  <!--  Carrito de compras -->
+   <!--  Carrito de compras -->
 <div id="carrito-contenedor">
   <button id="carrito-btn" aria-label="Abrir carrito">
     <i class="fas fa-shopping-cart"></i>
@@ -37,11 +37,12 @@
   </button>
 
   <div id="carrito-dropdown">
-    <h4>🛒 Tu pedido</h4>
+    <span id="cerrar-carrito" style="cursor:pointer; float:right; font-size:20px; font-weight:bold; margin:5px;">✖</span>
+    <h4>🛒 Tu carrito</h4>
     <ul id="carrito-items"></ul>
     <p id="carrito-total">Total: $0</p>
     <button id="vaciar-carrito" class="btn-vaciar">Vaciar carrito</button>
-    <button id="enviar-pedido" class="btn-enviar">Enviar pedido por WhatsApp</button>
+    <button id="enviar-carrito" class="btn-enviar">Enviar pedido por WhatsApp</button>
   </div>
 </div>
 
