--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
     <ul id="carrito-items"></ul>
     <p id="carrito-total">Total: $0</p>
     <button id="vaciar-carrito" class="btn-vaciar">Vaciar carrito</button>
-    <button id="enviar-carrito" class="btn-enviar">Enviar carrito por WhatsApp</button>
+    <button id="enviar-carrito" class="btn-enviar">Enviar pedido por WhatsApp</button>
   </div>
 </div>
 </header>
 
 
-  <!-- Hero -->
+ <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2> 🚚 Envíos a todo el país 🇦🇷 — 💁‍♀️ Asistencia en tu carrito — ✅ Garantía de entrega — 💳 Pago seguro y confiable</h2>
+    <h2>Compra mínima 6 productos (pueden variar)</h2>
+    <h2>Se envía por Correo Argentino. Llega de 2 a 5 días hábies</h2>
   </aside>
 
   <main>
@@ -201,6 +202,9 @@
         <a href="https://www.facebook.com/profile.php?id=61577104861271&locale=es_LA" target="_blank" class="social-btn facebook">
           <i class="fab fa-facebook"></i> Facebook
         </a>
+         <a href="https://wa.me/542236010443?text=Hola%2C%20vengo%20del%20catálogo%20y%20tengo%20un%20pedido/pregunta%20para%20hacerte%20" target="_blank" class="social-btn whatsapp">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a> 
       </div>
 
     <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
