agrego mechas Simpsons

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -18,7 +18,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-    ENVÍOS A TODO EL PAÍS <span class="emoji">🇦🇷</span> Somos de Miramar, Bs As. Golosinas Aries  <span class="emoji">♈ 🔥</span>
+    Compra mínima 6 productos - ENVÍOS A TODO EL PAÍS <span class="emoji">🇦🇷</span> Somos de Miramar, Bs As. Golosinas Aries  <span class="emoji">♈ 🔥</span>
     </h1>
     <nav>
       <a href="index.html">🎃👻</a>
@@ -52,8 +52,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Compra mínima 6 productos (pueden variar)</h2>
-    <h2>Se envía por Correo Argentino. Llega de 2 a 5 días hábies</h2>
+    <h2>Llega por Correo Argentino en 2/5 días hábiles.</h2>
   </aside>
 
   <main>
@@ -61,6 +60,22 @@
       <section class="destacados">
        
         <div class="portfolio">
+
+        <div class="card">
+          <img src="img/mecha.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
+          <h3>Mechas magicas (30u)</h3>
+          <p>$12.000</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/trompeta1.jpg" alt="Trompetas con chupetin y sonido" onclick="abrirModal(this)">
+          <h3>Trompetas con chupetin y sonido (30u)</h3>
+          <p>$8.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
 
         <div class="card">
           <img src="img/ojos.jpg" alt="Ojos" onclick="abrirModal(this)">
@@ -105,13 +120,6 @@
         </div>
          -->
 
-        <div class="card">
-          <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
-          <h3>Mechas magicas (30u)</h3>
-          <p>$9.900</p>
-          <button class="btn-carrito">Agregar al carrito</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
 
         <div class="card">
           <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
@@ -140,7 +148,7 @@
         <div class="card">
           <img src="img/latas1.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
           <h3>Latitas con chicles (30u)</h3>
-          <p>$12.500</p>
+          <p>$14.000</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -163,8 +171,8 @@
 
         <div class="card">
           <img src="img/burbujeros.jpg" alt="Burbujeros" onclick="abrirModal(this)">
-          <h3>Burbujeros (24u)</h3>
-          <p>$15.000</p>
+          <h3>Burbujeros (30u)</h3>
+          <p>$17.000</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -471,10 +479,8 @@
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
-        </div>
+       </div>
 
-
-      <!-- falta en minorista -->
 
       <div class="card">
           <img src="img/chupetincapibara1.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
@@ -605,6 +611,7 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+
 
 
 </div>
