--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-    Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
+    Compra mínima 6 productos - Envíos a todo el país 🇦🇷  - Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">🎃👻</a>
@@ -50,8 +50,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Compra mínima 6 productos (pueden variar)</h2>
-    <h2>Se envía por Correo Argentino. Llega de 2 a 5 días hábies</h2>
+    <h2>Llega por Correo Argentino en 2/5 días hábiles.</h2>
   </aside>
 
   <main>
@@ -172,19 +171,20 @@
       </div>
     </section>
 
-     <!-- MODAL DE PRODUCTO -->
-<div id="modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <img id="modal-img" src="" alt="Producto">
-    
-    <p id="modal-title" class="modal-title"></p>
-    <p id="modal-precio" class="modal-precio"></p> <!-- 🔹 precio aquí -->
+      <!-- MODAL DE PRODUCTO -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="modal-img" src="" alt="Producto">
+      
+      <p id="modal-title" class="modal-title"></p>
+      <p id="modal-precio" class="modal-precio"></p> <!-- 🔹 precio aquí -->
 
-    <div class="modal-botones">
-      <button id="modal-agregar" class="btn-carrito">Agregar al carrito</button>
-      <button id="modal-consulta" class="btn-consulta">Consulta 💬</button>
-    </div>
+      <div class="modal-botones">
+        <button id="modal-agregar" class="btn-carrito">Agregar al carrito</button>
+        <button id="modal-consulta" class="btn-consulta">Consulta 💬</button>
+  </div>
+
   </div>
 </div>
 
