aca con Ana de nuevo

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -18,7 +18,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-    Compra mínima 6 productos - ENVÍOS A TODO EL PAÍS <span class="emoji">🇦🇷</span> Somos de Miramar, Bs As. Golosinas Aries  <span class="emoji">♈ 🔥</span>
+    Compra mínima 7 productos - ENVÍOS A TODO EL PAÍS <span class="emoji">🇦🇷</span> Somos de Miramar, Bs As. Golosinas Aries  <span class="emoji">♈ 🔥</span>
     </h1>
     <nav>
       <a href="index.html">🎃👻</a>
@@ -124,7 +124,7 @@
         <div class="card">
           <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
           <h3>Fantasmita con chicles y sonido(30u)</h3>
-          <p>$8.900👻</p>
+          <p>$9.900👻</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -140,7 +140,15 @@
         <div class="card">
           <img src="img/nutello60.jpg" alt="Nutello" onclick="abrirModal(this)">
           <h3>Nutello pequeños (60u)</h3>
-          <p>$8.900</p>
+          <p>$9.900</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/nutello1.jpg" alt="Nutello" onclick="abrirModal(this)">
+          <h3>Nutello (30u)</h3>
+          <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -172,7 +180,7 @@
         <div class="card">
           <img src="img/burbujeros.jpg" alt="Burbujeros" onclick="abrirModal(this)">
           <h3>Burbujeros (30u)</h3>
-          <p>$17.500</p>
+          <p>$17.000</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -194,14 +202,6 @@
         </div>
 
         <div class="card">
-          <img src="img/gomitasblandas1.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Banfield(30u)</h3>
-          <p>$7.500</p>
-          <button class="btn-carrito">Agregar al carrito</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
-        <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido Brain(30u)</h3>
           <p>$8.900</p>
@@ -212,7 +212,7 @@
         <div class="card">
           <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo acido" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido skull (30u)</h3>
-          <p>$8.900</p>
+          <p>$9.500</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -300,15 +300,23 @@
         <div class="card">
           <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Pimball + chicles Kitty (x30)</h3>
-          <p>$8.900</p>
+          <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
+          <h3>Remera pimball + chicles(x30)</h3>
+          <p>$9.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
         <div class="card">
           <img src="img/pimballip.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Celu + chicles(x30)</h3>
-          <p>$8.900</p>
+          <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -360,6 +368,7 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+
       <!--
         <div class="card">
           <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
@@ -591,7 +600,7 @@
          <div class="card">
           <img src="img/trompetamaschicle.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Trompeta + chicles (x30)</h3>
-          <p>$8.900</p>
+          <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
