cambios en modal responsive

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -204,7 +204,7 @@
         <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
           <h3>Chupetin con polvo acido Brain(30u)</h3>
-          <p>$8.900</p>
+          <p>$9.500</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
@@ -650,7 +650,7 @@
   <footer>
     <a href="#" class="back-to-top">⬆ Inicio</a>
     
-    <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
+    <p>© 2025 Golosinas Aries.</p>
 
   </footer>
 
