--- a/contacto.html
+++ b/contacto.html
@@ -55,8 +55,9 @@
 <main>
     
     <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
-      <p class="hero"> """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""   </p>
+      <p class="hero"> """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""   </p>
       <p class="titulo-animado"> Seguinos 👇 </p>
+      <p class="hero"> """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""   </p>
     </aside>
 
       <!-- Botones sociales -->
