--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </a> 
       </div>
 
-    <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
+    <p>© 2025 Golosinas Aries</p>
 
 </footer>
 
