--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -62,6 +62,70 @@
         <div class="portfolio">
 
         <div class="card">
+          <img src="img/hombrearania.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+          <h3>Hombre araña con pastillitas(30u)</h3>
+          <p>$9.900</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/lechuza.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas lechuza</h3>
+          <p>$4.900 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/sacalenguas1.jpg" alt="Fantasmita" onclick="abrirModal(this)">
+          <h3> Saca lenguas (30u)</h3>
+          <p>$9.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/batman1.jpg" alt="Ojos" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Batman (30u)</h3>
+          <p>$7.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/supermario1.jpg" alt="super mario" onclick="abrirModal(this)">
+          <h3>Gomitas blandas Super Mario (30u)</h3>
+          <p>$7.500</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/helicopter.jpg" alt="chicles" onclick="abrirModal(this)">
+          <h3>Helicoptero + pastillitas (x30)</h3>
+          <p>$9.900</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+            <img src="img/carrera.jpg" alt="Autos de carrera con chicles" onclick="abrirModal(this)">
+            <h3>Autos de carrera con chicles(30u)</h3>
+            <p>$9.900</p>
+            <button class="btn-carrito">Agregar al carrito</button>
+            <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
+          <h3> Camiseta pimball + pastillitas (x30)</h3>
+          <p>$9.900</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
           <img src="img/mecha.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
           <h3>Mechas magicas (30u)</h3>
           <p>$12.000</p>
@@ -123,7 +187,7 @@
 
         <div class="card">
           <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
-          <h3>Fantasmita con chicles y sonido(30u)</h3>
+          <h3>Fantasmita con pastillitas y sonido(30u)</h3>
           <p>$9.900👻</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -242,6 +306,22 @@
         </div>
 
         <div class="card">
+          <img src="img/alcanciaojoamarillo.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Tigre amarillo</h3>
+          <p>$4.900 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+         <div class="card">
+          <img src="img/tigrerojo.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Tigre rojo</h3>
+          <p>$4.900 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+        
+        <div class="card">
           <img src="img/alcancias2.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
           <h3>Alcancias con gelatinas Pollito</h3>
           <p>$4.900 (CADA UNA)</p>
@@ -296,7 +376,7 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
+        <!--
         <div class="card">
           <img src="img/pimballkit.jpg" alt="chicles" onclick="abrirModal(this)">
           <h3>Pimball + chicles Kitty (x30)</h3>
@@ -304,22 +384,17 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+        -->
 
-         <div class="card">
-          <img src="img/pimballremera.jpg" alt="chicles" onclick="abrirModal(this)">
-          <h3>Remera pimball + chicles(x30)</h3>
-          <p>$9.900</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-          <button class="btn-carrito">Hacer una consulta</button>
-        </div>
-
+        <!--
         <div class="card">
           <img src="img/pimballip.jpg" alt="chicles" onclick="abrirModal(this)">
-          <h3>Celu + chicles(x30)</h3>
+          <h3> Pimball Celu + pastillitas(x30) </h3>
           <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+        -->
 
         <div class="card">
           <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
@@ -353,6 +428,7 @@
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
+        <!--
         <div class="card">
           <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
           <h3>Gomitas acidas gomutcho (500g)</h3>
@@ -360,6 +436,7 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+        -->
 
         <div class="card">
           <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
@@ -599,13 +676,13 @@
 
          <div class="card">
           <img src="img/trompetamaschicle.jpg" alt="chicles" onclick="abrirModal(this)">
-          <h3>Trompeta + chicles (x30)</h3>
+          <h3>Trompeta + pastillitas (x30)</h3>
           <p>$9.900</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
-          <div class="card">
+        
+        <div class="card">
           <img src="img/gomitasblandas5.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
           <h3>Gomitas blandas Among Us(30u)</h3>
           <p>$7.500</p>
@@ -620,8 +697,6 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-
-
 
 </div>
 
