--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="card">
           <img src="img/gomitablandaCara3.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
-          <h3>Gomitas (30u)</h3>
+          <h3>Gomitas cara (30u)</h3>
           <p>$9.500</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -121,7 +121,7 @@
 
         <div class="card">
           <img src="img/fantasmita.jpg" alt="Fantasmita" onclick="abrirModal(this)">
-          <h3>Fantasmita con chicles y sonido(30u)</h3>
+          <h3>Fantasmita con pastillitas y sonido(30u)</h3>
           <p>$9.900👻</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -180,7 +180,7 @@
       <p id="modal-title" class="modal-title"></p>
       <p id="modal-precio" class="modal-precio"></p> <!-- 🔹 precio aquí -->
 
-      <div class="modal-botones">
+    <div class="modal-botones">
         <button id="modal-agregar" class="btn-carrito">Agregar al carrito</button>
         <button id="modal-consulta" class="btn-consulta">Consulta 💬</button>
   </div>
