--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -726,6 +726,7 @@
 
   <footer>
     <a href="#" class="back-to-top">⬆ Volver</a>
+    <a href="contacto.html">Contacto</a>
     
     <p>© 2025 Golosinas Aries.</p>
 
