--- a/contacto.html
+++ b/contacto.html
@@ -26,8 +26,7 @@
     </h1>
 
     <nav>
-      <a href="contacto.html">Contacto</a>
-      <a href="catalogo.html">Catálogo</a>
+      <a href="catalogo.html">Volver al atálogo</a>
     </nav>
 
   </div>
