--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
     </h1>
 
     <nav>
-      <a href="catalogo.html">Volver al atálogo</a>
+      <a href="catalogo.html">👈 Volver al catálogo</a>
     </nav>
 
   </div>
