--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -223,7 +223,15 @@
 
         <div class="card">
           <img src="img/mecha.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
-          <h3>Mechas magicas (30u)</h3>
+          <h3>Mechas magicas Simpsons(30u)</h3>
+          <p>$12.000</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
+          <h3>Mechas magicas Mario Bross(30u)</h3>
           <p>$12.000</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
