--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -231,7 +231,7 @@
 
         <div class="card">
           <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
-          <h3>Mechas magicas Mario Bross(30u)</h3>
+          <h3>Mechas magicas Mario Bros(30u)</h3>
           <p>$12.000</p>
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
@@ -411,7 +411,7 @@
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
-      <!--
+      
         <div class="card">
           <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
           <h3>Gomitas Yummy frutilla con crema (500g)</h3>
@@ -419,7 +419,7 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
-      -->
+    
 
       <!--
         <div class="card">
