--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -739,10 +739,23 @@
           <button class="btn-carrito">Agregar al carrito</button>
           <button class="btn-carrito">Hacer una consulta</button>
         </div>
+
+        <div class="card">
+          <img src="img/oblita_chocolate.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+            <h3> Oblita chocolate (48u)</h3>
+            <p>$5.800</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
+          <img src="img/oblita_marroc.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+            <h3> Oblita Marroc (48u)</h3>
+            <p>$5.800</p>
+          <button class="btn-carrito">Agregar al carrito</button>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
         
-
-
-      
 
 </div>
 
