--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -62,6 +62,13 @@
         <div class="portfolio">
 
         <div class="card">
+          <img src="img/logo.jpg" alt="Gomitas blandas Ojos" onclick="abrirModal(this)">
+          <h3>PROMOCION SEMANAL</h3>
+          <p>Con la compra de 20 productos o más, se llevan DE REGALO 2 frascos de gomitas blandas de 20-30 unidades cada uno</p>
+          <button class="btn-carrito">Hacer una consulta</button>
+        </div>
+
+        <div class="card">
           <img src="img/ojos.jpg" alt="Gomitas blandas Ojos" onclick="abrirModal(this)">
           <h3>Gomitas blandas Ojos (30u)</h3>
           <p>$7.500</p>
